--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <div>
         <input type="checkbox" class="checkbox" id="checkbox">
         <label for="checkbox" class="checkbox-label">
-            <img src="moon.png" class="moon">
-            <img src="sun.png" class="sun">
+            <span class="moon">🌚</span>
+            <span class="sun">🌞</span>
             <span class="ball"></span>
         </label>
     </div>
     <div id="weather-container">
-        <h2>Weather App</h2>
+        
         <input type="text"id="city" placeholder="enter city">
         <button onclick="getWeather()">Search</button>
         <div class="weatherEmoji">
